<resources>
    <string name="app_name">壹码</string>
    <string name="_search_main_words">搜索关键字</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_text_content">人民币收盘由升转跌美指反弹提振客盘购汇意愿</string>
    <string name="_text_str1">BTG改变现有算法以阻止ASIC矿工和双重攻击</string>
    <string name="_text_str2">据cryptovest消息，BTG将现有的Equihash PoWBTG将现有的EquihashBTG将现有的Equihash算法改为Equish-BTG，阻止AICA矿工和双重攻击（51%攻击），BTG还升级了难度调整算法(DASAA)，使其区块链对哈希功率的变化更敏感。</string>
    <string name="_str_fix_phone_num">修改手机号</string>
    <string name="_str_about_us">关于我们</string>
    <string name="_str_suggest_friend">推荐好友</string>
    <string name="_str_search_history">搜索历史</string>
    <string name="_str_input_powernum_and_password">请输入用户名和密码!</string>
    <string name="_str_wait_send_power_code">请稍后再尝试发送验证码!</string>
    <string name="_str_send_power_code">发送验证码</string>
    <string name="_str_input_all_signup_info">请填写完成的注册信息!</string>
    <string name="_str_fix_password">修改密码</string>
    <string name="_str_fix_phone_num_success">手机号修改成功</string>
    <string name="_str_friend">朋友圈</string>
    <string name="_str_qq">QQ</string>
    <string name="_str_cancel">取消</string>
    <string name="_ste_weixin">微信</string>
    <string name="_str_qq_zone">QQ空间</string>
    <string name="_str_weibo">微博</string>
    <string name="_str_input_phone_num">请输入手机号</string>
    <string name="umeng_socialize_sharetosina">分享到新浪微博</string>
    <string name="umeng_socialize_sharetodouban">分享到豆瓣</string>
    <string name="umeng_socialize_sharetorenren">分享到人人网</string>
    <string name="umeng_socialize_sharetotencent">分享到腾讯微博</string>
    <string name="umeng_socialize_sharetotwitter">分享到twitter</string>
    <string name="umeng_socialize_sharetolinkin">分享到领英</string>
    <string name="_str_now_use">立即体验</string>
    <string name="_str_jump">跳过</string>
    <string name="_str_about_us_1">商务合作：</string>
    <string name="_str_about_us_2">建议反馈：</string>
    <string name="_str_about_us_3">投稿报道：</string>
    <string name="_str_about_us_4">客服微信：</string>
    <string name="_str_share_botton">每日登陆、签到、阅读、分享均有好礼相送</string>
    <string name="_str_signin">每日签到</string>
    <string name="_str_day1">第1天</string>
    <string name="_str_day2">第2天</string>
    <string name="_str_day3">第3天</string>
    <string name="_str_day4">第4天</string>
    <string name="_str_day5">第5天</string>
    <string name="_str_day6">第6天</string>
    <string name="_str_day7">第7天</string>
    <string name="_str_plus_2">+2</string>
    <string name="_str_plus_3">+3</string>
    <string name="_str_plus_4">+4</string>
    <string name="_str_plus_9">+9</string>
    <string name="_str_plus_8">+8</string>
    <string name="_str_plus_7">+7</string>
    <string name="_str_plus_6">+6</string>
    <string name="_str_plus_5">+5</string>
    <string name="_str_suger">糖果</string>
    <string name="_str_now_details">实时行情</string>
    <string name="_str_deal_address">交易所</string>
    <string name="_str_now_sold_num">最新成交价</string>
    <string name="_str_change_money_type">交易对名称</string>
    <string name="_str_24h_change">24H变化</string>
</resources>
